--- a/website/css.css
+++ b/website/css.css
@@ -85,14 +85,14 @@
   border: 5px solid #f2f2f2;
 }
 .toplineNumbers{
-  background-color: #dbd6d6;
+  background-color: #e7e7e7;
   border: 5px solid #f2f2f2;
   text-align: center;
   padding-top: 150px;
   padding-bottom: 150px;
 }
 .dataTable{
-  background-color: #dbd6d6;
+  background-color: #e7e7e7;
   border: 5px solid #f2f2f2;
   text-align: center;
   padding-top: 150px;
