--- a/website/css.css
+++ b/website/css.css
@@ -71,18 +71,20 @@
 
 
 .header{
-  height: 80px;
-  font-size: 45px;
+  height: 90px;
+  font-size: 48px;
   font-weight: 550;
   background-color: #456087;
   color: white;
   text-indent: 1.5%;
+  padding-top: 0.25%;
 }
 .subheader{
-  height: 80px;
+  height: 90px;
   font-size: 16px;
   background-color: #7894ba;
   color: white;
+  padding-top: 0.5%;
 }
 .mapContainer{
   border: 5px solid #f2f2f2;
