--- a/website/css.css
+++ b/website/css.css
@@ -68,6 +68,12 @@
 .toggleLine.toggleLineVisible{
   display: block;
 }
+.toggleBar{
+  display: none;
+}
+.toggleBar.toggleBarVisible{
+  display: block;
+}
 
 
 .header{
