--- a/website/css.css
+++ b/website/css.css
@@ -53,6 +53,7 @@
 .instructions{
   font-size: 11px;
   color: grey;
+  padding-top: 2px;
 }
 
 
@@ -78,11 +79,13 @@
 
 .header{
   height: 80px;
-  font-size: 47px;
+  font-size: 29pt;
   font-weight: 550;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: #456087;
   color: white;
   text-indent: 1%;
+  padding-top: 8px;
 }
 .subheader{
   height: 80px;
