--- a/website/css.css
+++ b/website/css.css
@@ -106,7 +106,7 @@
   border: 5px solid #e7e7e7;
 }
 .toplineNumbers{
-  background-color: white;
+  background-color: #e7e7e7;
   border: 5px solid #e7e7e7;
   text-align: center;
   padding-top: 150px;
@@ -122,7 +122,7 @@
 .footer{
   text-align: center;
   font-size: 14px;
-  background-color: #888888;
-  color: white;
+  background-color: #e7e7e7;
+  color: gray;
   padding-top: 0.75%;
 }
