--- a/website/css.css
+++ b/website/css.css
@@ -127,10 +127,9 @@
   border: 5px solid #e7e7e7;
 }
 .toplineNumbers{
-  background-color: #e7e7e7;
+  background-color: #f1f1f1;
 }
 .card{
-  background-color: white;
   border: 5px solid #e7e7e7;
   display: flex;
   justify-content: center;
