--- a/website/css.css
+++ b/website/css.css
@@ -147,6 +147,10 @@
   padding-top: 20px;
   text-indent: 15px;
 }
+.tableEmbed{
+  display: block;
+  margin: none;
+}
 .footer{
   height: 60px;
   width: 100%;
