--- a/website/css.css
+++ b/website/css.css
@@ -144,8 +144,8 @@
 .dataTable{
   background-color: white;
   border: 5px solid #e7e7e7;
-  padding-top: 20px;
-  text-indent: 15px;
+  padding-top: 10px;
+  padding-bottom: 20px;
 }
 .tableEmbed{
   display: block;
