--- a/website/css.css
+++ b/website/css.css
@@ -56,13 +56,21 @@
   padding-top: 2px;
 }
 .descBig{
-  font-size: 17px;
+  color: #456087;
+  font-size: 16px;
   font-family: Helvetica, sans-serif, Arial;
   text-transform: uppercase;
-  color: gray;
 }
 .subhead{
-  font-weight: 500;
+  font-weight: 700;
+  font-size: 22px;
+  font-family: Helvetica, sans-serif, Arial;
+}
+.num{
+  font-size: 40px;
+  font-family: Helvetica, sans-serif, Arial;
+}
+.changeNum{
   font-size: 24px;
   font-family: Helvetica, sans-serif, Arial;
 }
