--- a/website/css.css
+++ b/website/css.css
@@ -66,7 +66,7 @@
   font-size: 22px;
   font-family: Helvetica, sans-serif, Arial;
 }
-.num{
+.cardNum{
   font-size: 40px;
   font-family: Helvetica, sans-serif, Arial;
 }
