--- a/website/css.css
+++ b/website/css.css
@@ -146,9 +146,8 @@
   border: 5px solid #e7e7e7;
   padding-top: 25px;
   padding-bottom: 25px;
-  position: relative;
-  width: auto;
-  min-width: 235px;
+  max-width: 300px;
+  min-width: 225px;
 }
 .dataTable{
   background-color: white;
