--- a/website/css.css
+++ b/website/css.css
@@ -146,6 +146,7 @@
   border: 5px solid #e7e7e7;
   padding-top: 20px;
   padding-bottom: 20px;
+  max-width: 250px;
 }
 .dataTable{
   background-color: white;
