--- a/website/css.css
+++ b/website/css.css
@@ -56,7 +56,7 @@
   padding-top: 2px;
 }
 .descBig{
-  color: #456087;
+  color: gray;
   font-size: 1em;
   font-family: Helvetica, sans-serif, Arial;
   text-transform: uppercase;
