--- a/website/css.css
+++ b/website/css.css
@@ -209,7 +209,7 @@
   padding-bottom: 15px;
 }
 .toplineNumbers{
-  background-color: #f1f1f1;
+  background-color: #e7e7e7;
   border: 5px solid #e7e7e7;
 }
 .dataTable{
