--- a/website/css.css
+++ b/website/css.css
@@ -236,6 +236,11 @@
   color: gray;
   text-align: center;
 }
+.btn{
+  background-color: #f5f5f5;
+  border: #d6d6d6 solid 1px;
+}
+
 
 .btn:hover{
   color: white;
