--- a/website/css.css
+++ b/website/css.css
@@ -111,6 +111,11 @@
   padding-top: 10px;
   height: 500px;
 }
+.btn{
+  background-color: #f5f5f5;
+  border: #e4e4e4 solid 1px;
+  font-size: 0.8em;
+}
 @media (min-width: 576px) { 
   .instructions{
     font-size: 0.6em;
@@ -150,6 +155,10 @@
     border: 5px solid #e7e7e7;
     padding-top: 10px;
     height: auto;
+  }
+  .btn{
+    background-color: #f5f5f5;
+    border: #e4e4e4 solid 1px;
   }
 }
 @media (min-width: 992px) {
@@ -236,10 +245,6 @@
   background-color: #e7e7e7;
   color: gray;
   text-align: center;
-}
-.btn{
-  background-color: #f5f5f5;
-  border: #e4e4e4 solid 1px;
 }
 
 
