--- a/website/css.css
+++ b/website/css.css
@@ -117,12 +117,13 @@
   font-size: 0.8em;
 }
 .footer{
-  height: 60px;
+  height: 50px;
   width: 100%;
   font-size: 0.7em;
   background-color: #e7e7e7;
   color: gray;
   text-align: center;
+  padding-top: 5px;
 }
 @media (min-width: 576px) { 
   .instructions{
@@ -170,6 +171,7 @@
   }
   .footer{
     font-size: 0.9em;
+    height: 60px;
   }
 }
 @media (min-width: 992px) {
