--- a/website/css.css
+++ b/website/css.css
@@ -79,9 +79,8 @@
   font-family: Helvetica, sans-serif, Arial;
 }
 .header{
-  font-size: 1.7em;
-  font-weight: 550;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.9em;
+  font-family: 'Lato', sans-serif;
   background-color: #456087;
   color: white;
   padding-left: 15px;
@@ -192,6 +191,7 @@
   .header{
     height: 80px;
     font-size: 2.4em;
+    padding-top: 10px;
   }
   .subheader{
     height: 80px;
