--- a/website/css.css
+++ b/website/css.css
@@ -81,6 +81,7 @@
 .header{
   font-size: 1.9em;
   font-family: 'Lato', sans-serif;
+  font-weight: 700;
   background-color: #456087;
   color: white;
   padding-left: 15px;
@@ -89,6 +90,8 @@
 .subheader{
   height: 50px;
   font-size: 0.6em;
+  font-family: 'Lato', sans-serif;
+  font-weight: 500;
   background-color: #456087;
   color: white;
   padding-top: 0.5%;
@@ -183,7 +186,7 @@
     font-size: 1.5em;
   }
   .cardNum{
-    font-size: 2.4em;
+    font-size: 2.5em;
   }
   .changeNum{
     font-size: 1.6em;
