--- a/website/css.css
+++ b/website/css.css
@@ -107,11 +107,12 @@
   background-color: #e7e7e7;
   border: 2px solid #e7e7e7;
 }
-.dataTable{
+.tableContainer{
   background-color: white;
   border: 5px solid #e7e7e7;
   padding-top: 10px;
   height: 500px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .btn{
   background-color: #f5f5f5;
@@ -161,7 +162,7 @@
   .toplineNumbers{
     border: 0px solid #e7e7e7;
   }
-  .dataTable{
+  .tableContainer{
     background-color: white;
     border: 5px solid #e7e7e7;
     padding-top: 10px;
