--- a/website/css.css
+++ b/website/css.css
@@ -144,7 +144,7 @@
   }
   .header{
     height: 60px;
-    font-size: 2em;
+    font-size: 1.8em;
     padding-left: 20px;
     padding-top: 8px;
   }
@@ -173,6 +173,38 @@
   .footer{
     font-size: 0.9em;
     height: 60px;
+  }
+}
+@media (min-width: 768px) {
+  .instructions{
+    font-size: 0.8em;
+  }
+  .descBig{
+    font-size: 1em;
+  }
+  .subhead{
+    font-size: 1.5em;
+  }
+  .cardNum{
+    font-size: 2.5em;
+  }
+  .changeNum{
+    font-size: 1.6em;
+  }
+  .header{
+    height: 100px;
+    font-size: 1.6em;
+    padding-top: 10px;
+  }
+  .subheader{
+    height: 100px;
+    font-size: 0.9em;
+    padding-top: 15px;
+    padding-left: 5px;
+  }
+  .card{
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
 }
 @media (min-width: 992px) {
