--- a/website/css.css
+++ b/website/css.css
@@ -128,7 +128,7 @@
 }
 .lineChartContainer{
   border: 5px solid #e7e7e7;
-  padding-top: 10px;
+  padding-top: 20px;
   padding-bottom: 15px;
 }
 @media (min-width: 576px) { 
@@ -156,6 +156,7 @@
   .subheader{
     height: 60px;
     font-size: 0.8em;
+    padding-left: 20px;
   }
   .card{
     padding-top: 15px;
@@ -190,27 +191,26 @@
     font-size: 0.8em;
   }
   .descBig{
-    font-size: 1em;
+    font-size: 0.8em;
   }
   .subhead{
-    font-size: 1.5em;
+    font-size: 1.1em;
   }
   .cardNum{
-    font-size: 2.5em;
+    font-size: 2em;
   }
   .changeNum{
-    font-size: 1.6em;
+    font-size: 1.4em;
   }
   .header{
-    height: 100px;
-    font-size: 1.6em;
+    height: 60px;
+    font-size: 2.4em;
     padding-top: 10px;
   }
   .subheader{
-    height: 100px;
-    font-size: 0.9em;
+    height: 60px;
+    font-size: 0.8em;
     padding-top: 15px;
-    padding-left: 5px;
   }
   .card{
     padding-top: 20px;
@@ -222,30 +222,61 @@
     font-size: 0.8em;
   }
   .descBig{
-    font-size: 1em;
+    font-size: 0.8em;
   }
   .subhead{
-    font-size: 1.5em;
+    font-size: 1.1em;
   }
   .cardNum{
-    font-size: 2.5em;
+    font-size: 2em;
   }
   .changeNum{
-    font-size: 1.6em;
+    font-size: 1.4em;
   }
   .header{
-    height: 80px;
+    height: 70px;
     font-size: 2.4em;
     padding-top: 10px;
   }
   .subheader{
-    height: 80px;
-    font-size: 1em;
-    padding-left: 5px;
+    height: 60px;
+    font-size: 0.9em;
+    padding-top: 15px;
   }
   .card{
     padding-top: 20px;
     padding-bottom: 20px;
+  }
+}
+@media (min-width: 1200px) {
+  .instructions{
+    font-size: 0.8em;
+  }
+  .descBig{
+    font-size: 0.8em;
+  }
+  .subhead{
+    font-size: 1.2em;
+  }
+  .cardNum{
+    font-size: 1.5em;
+  }
+  .changeNum{
+    font-size: 1.4em;
+  }
+  .header{
+    height: unset;
+    font-size: 2.2em;
+    padding-top: 10px;
+  }
+  .subheader{
+    height: unset;
+    font-size: 1em;
+    padding-left: 5px;
+  }
+  .card{
+    padding-top: 25px;
+    padding-bottom: 25px;
   }
 }
 
