--- a/website/css.css
+++ b/website/css.css
@@ -36,8 +36,8 @@
 }
 .lineChart{
   float: left;
-  width:125px; 
-  height:50px; 
+  width:125px;
+  height:50px;
   color: gray;
 }
 .county{
@@ -135,7 +135,7 @@
   display: none;
   width: 100%;
 }
-@media (min-width: 576px) { 
+@media (min-width: 576px) {
   .instructions{
     font-size: 0.8em;
   }
@@ -307,7 +307,12 @@
 .toggleBar.toggleBarVisible{
   display: block;
 }
-
+.toggleTable{
+  display: none;
+}
+.toggleTable.toggleTableVisible{
+  display: block;
+}
 
 
 
