added table, did some cleanup

--- a/website/css.css
+++ b/website/css.css
@@ -263,10 +263,10 @@
     font-size: 1em;
   }
   .cardNum{
-    font-size: 1.5em;
+    font-size: 1.35em;
   }
   .changeNum{
-    font-size: 1.4em;
+    font-size: 1.3em;
   }
   .header{
     height: unset;
@@ -323,7 +323,12 @@
 }
 .barChartContainer{
   border: 5px solid #e7e7e7;
-  padding-top: 12px;
+  padding-top: 12px
+  padding-bottom: 15px;
+}
+.tableContainer{
+  border: 5px solid #e7e7e7;
+  padding-top: 12px
   padding-bottom: 15px;
 }
 .tableEmbed{
