--- a/website/css.css
+++ b/website/css.css
@@ -326,12 +326,12 @@
 }
 .barChartContainer{
   border: 5px solid #e7e7e7;
-  padding-top: 12px
+  padding-top: 12px;
   padding-bottom: 15px;
 }
 .tableContainer{
   border: 5px solid #e7e7e7;
-  padding-top: 12px
+  padding-top: 20px;
   padding-bottom: 15px;
 }
 .tableEmbed{
