--- a/website/css.css
+++ b/website/css.css
@@ -111,7 +111,8 @@
 }
 .btn{
   background-color: #f5f5f5;
-  border: #e4e4e4 solid 1px;
+  border: #e7e7e7 solid 1px;
+  color: #666666;
   font-size: 0.8em;
 }
 .footer{
@@ -199,8 +200,7 @@ text {
     border: 0px solid #e7e7e7;
   }
   .btn{
-    background-color: #f5f5f5;
-    border: #e4e4e4 solid 1px;
+    border: #e7e7e7 solid 1px;
   }
   .footer{
     font-size: 0.9em;
@@ -362,7 +362,7 @@ text {
 .btn.engaged{
   font-weight: 600;
   color: black;
-  border: #e4e4e4 solid 1px;
+  border: #e7e7e7 solid 1px;
   background:#ffffff;
 }
 .btn:hover{
