--- a/website/css.css
+++ b/website/css.css
@@ -87,8 +87,8 @@
 }
 .card{
   border: 3px solid #e7e7e7;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  display: flex;
+  justify-content: center;
 }
 .toplineNumbers{
   background-color: #e7e7e7;
