--- a/website/css.css
+++ b/website/css.css
@@ -57,7 +57,7 @@
 
 
 .navbar {
-  font-size: 0.95em;
+  font-size: 0.7em;
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   background-color: #456087;
@@ -150,6 +150,16 @@ text {
   font-family: 'Lato', sans-serif;
   font-size: 16px;
   font-weight: 700;
+}
+@media (min-width: 340px) {
+  .navbar {
+    font-size: 0.8em;
+  }
+}
+@media (min-width: 380px) {
+  .navbar {
+    font-size: 0.95em;
+  }
 }
 @media (min-width: 576px) {
   .instructions{
