--- a/website/css.css
+++ b/website/css.css
@@ -82,6 +82,7 @@
   font-weight: 500;
   font-size: 0.9em;
   font-family: Helvetica, sans-serif, Arial;
+  font-weight: 700;
 }
 .cardNum{
   font-size: 1.6em;
