--- a/website/css.css
+++ b/website/css.css
@@ -256,7 +256,7 @@ text {
     font-size: 1.4em;
   }
   text {
-    font-size: 12px;
+    font-size: 8px;
   }
 }
 @media (min-width: 1200px) {
@@ -280,9 +280,20 @@ text {
     width: 100%;
   }
   text {
+    font-size: 10px;
+  }
+}
+@media (min-width: 1600px) {
+  text {
+    font-size: 12px;
+  }
+}
+@media (min-width: 1800px) {
+  text {
     font-size: 14px;
   }
 }
+
 
 .toggleMap.toggleMapVisible{
   display: block;
