update blog header

--- a/website/blog/docs/styles.css
+++ b/website/blog/docs/styles.css
@@ -7,7 +7,7 @@
 
 .distill-site-nav a {
   color: inherit;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .distill-site-nav a:hover {
