--- a/website/css.css
+++ b/website/css.css
@@ -58,14 +58,14 @@
 
 .navbar {
   font-size: 0.7em;
-  font-family: 'Lato', sans-serif;
-  font-weight: 400;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 500;
   background-color: #456087;
 }
 .navbar-brand {
   font-size: 1.3em;
-  font-family: 'Lato', sans-serif;
-  font-weight: 700;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 500;
   background-color: #456087;
 }
 .instructions{
@@ -199,6 +199,7 @@ text {
   }
   .navbar-brand {
     font-size: 1.2em;
+    padding-left: 12px;
   }
   text {
     font-size: 10px;
