--- a/website/blog/docs/styles.css
+++ b/website/blog/docs/styles.css
@@ -1,9 +1,14 @@
 .distill-site-nav {
   color: rgb(240, 240, 240);
   background-color: #456087;
-  font-size: 15px;
-  font-weight: 500;
+  font-size: 1em;
+  font-weight: 400;
 }
+
+.distill-site-nav .title {
+    font-size: 1.1em;
+    font-weight: 500;
+  }
 
 .distill-site-nav a {
   color: inherit;
