--- a/website/css.css
+++ b/website/css.css
@@ -61,9 +61,10 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 400;
   background-color: #456087;
+  padding: .4rem 1rem;
 }
 .navbar-brand {
-  font-size: 1.1em;
+  font-size: 1.2em;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 500;
   background-color: #456087;
@@ -184,9 +185,6 @@ text {
   .mapTitle{
     font-size: 20px;
   }
-  .navbar {
-    font-size: 1em;
-  }
 }
 @media (min-width: 768px) {
   .instructions{
@@ -215,8 +213,7 @@ text {
     font-size: 22px;
   }
   .navbar-brand {
-    font-size: 1.1em;
-    padding-left: 12px;
+    padding-left: 15px;
   }
   text {
     font-size: 10px;
