--- a/website/css.css
+++ b/website/css.css
@@ -57,14 +57,14 @@
 
 
 .navbar {
-  font-size: 1em;
+  font-size: 0.9em;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 400;
   background-color: #456087;
   padding: .4rem 1rem;
 }
 .navbar-brand {
-  font-size: 1.2em;
+  font-size: 1em;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 500;
   background-color: #456087;
@@ -153,6 +153,14 @@ text {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
 }
+@media (min-width: 340px) {
+  .navbar {
+    font-size: 1em;
+  }
+  .navbar-brand {
+    font-size: 1.1em;
+  }
+}
 @media (min-width: 576px) {
   .instructions{
     font-size: 1em;
@@ -184,6 +192,12 @@ text {
   }
   .mapTitle{
     font-size: 20px;
+  }
+  .navbar {
+    font-size: 1em;
+  }
+  .navbar-brand {
+    font-size: 1.2em;
   }
 }
 @media (min-width: 768px) {
