--- a/website/css.css
+++ b/website/css.css
@@ -76,24 +76,23 @@
 }
 .descBig{
   font-size: 0.8em;
-  text-transform: uppercase;
 }
 .subhead{
   font-weight: 500;
-  font-size: 0.9em;
+  font-size: 0.8em;
 }
 .cardNum{
   font-size: 1.6em;
 }
-.changeNum{
-  font-size: 1.3em;
+.changeToday{
+  font-size: 0.75em;
 }
 .card{
   border: 3px solid #e7e7e7;
   display: flex;
   justify-content: center;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 25px;
+  padding-bottom: 25px;
   font-family: Arial, Helvetica, sans-serif;
 }
 .toplineNumbers{
@@ -160,22 +159,50 @@ text {
   .navbar-brand {
     font-size: 1.1em;
   }
+  .subhead{
+    font-size: 0.9em;
+  }
+  .cardNum{
+    font-size: 1.8em;
+  }
+  .changeToday{
+    font-size: 0.8em;
+  }
+}
+@media (min-width: 480px) {
+  .subhead{
+    font-size: 1.1em;
+  }
+  .cardNum{
+    font-size: 2em;
+  }
+  .changeToday{
+    font-size: 1em;
+  }
+}
+@media (min-width: 545px) {
+  .subhead{
+    font-size: 1.3em;
+  }
+  .cardNum{
+    font-size: 2.1em;
+  }
+  .changeToday{
+    font-size: 1.2em;
+  }
 }
 @media (min-width: 576px) {
   .instructions{
     font-size: 1em;
   }
-  .descBig{
-    font-size: 1.1em;
-  }
   .subhead{
-    font-size: 1.3em;
+    font-size: 1.5em;
   }
   .cardNum{
-    font-size: 2.3em;
+    font-size: 2.5em;
   }
-  .changeNum{
-    font-size: 1.7em;
+  .changeToday{
+    font-size: 1.3em;
   }
   .card{
     border: 5px solid #e7e7e7;
@@ -204,17 +231,14 @@ text {
   .instructions{
     font-size: 0.8em;
   }
-  .descBig{
-    font-size: 0.8em;
-  }
   .subhead{
-    font-size: 1.2em;
+    font-size: 1.3em;
   }
   .cardNum{
     font-size: 2em;
   }
-  .changeNum{
-    font-size: 1.4em;
+  .changeToday{
+    font-size: 1.2em;
   }
   .card{
     padding-top: 20px;
@@ -237,17 +261,14 @@ text {
   .instructions{
     font-size: 0.8em;
   }
-  .descBig{
-    font-size: 0.8em;
-  }
   .subhead{
-    font-size: 1em;
+    font-size: 1.2em;
   }
   .cardNum{
     font-size: 2em;
   }
-  .changeNum{
-    font-size: 1.4em;
+  .changeToday{
+    font-size: 1.1em;
   }
   text {
     font-size: 8px;
@@ -257,17 +278,14 @@ text {
   .instructions{
     font-size: 0.8em;
   }
-  .descBig{
-    font-size: 0.8em;
-  }
   .subhead{
     font-size: 1em;
   }
   .cardNum{
-    font-size: 1.35em;
+    font-size: 1.2em;
   }
-  .changeNum{
-    font-size: 1.3em;
+  .changeToday{
+    font-size: 0.9em;
   }
   .toggleMap{
     display: none;
@@ -275,6 +293,17 @@ text {
   }
   text {
     font-size: 10px;
+  }
+}
+@media (min-width: 1250px) {
+  .subhead{
+    font-size: 1em;
+  }
+  .cardNum{
+    font-size: 1.35em;
+  }
+  .changeToday{
+    font-size: 0.95em;
   }
 }
 @media (min-width: 1600px) {
